--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,12 @@
     </head>
     <body>
         <div id="app">
+            <header id="jsp" background-color="blue">
+
+            </header>
+            <div id="rejsp">
+
+            </div>
 
         </div>
 
